--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Martin Lieber</h1>
+      </div>
+
+      <div class="stanleephoto">
+        <img src="./stan-lee.jpg" alt="" />
+      </div>
+    </div>
+  </body>
 </html>
