--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="stanleephoto">
-        <img src="./stan-lee.jpg" alt="" />
+        <img src="./stan-lee.jpg" alt="StanleePhoto" />
       </div>
     </div>
   </body>
