--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="container">
       <div class="header">
-        <h1>Martin Lieber</h1>
+        <h1>Martin <span> Lieber </span></h1>
       </div>
 
       <div class="stanleephoto">
         <img src="./stan-lee.jpg" alt="StanleePhoto" />
+        <h2>From 1922 to 2018</h2>
       </div>
     </div>
   </body>
