--- a/index.html
+++ b/index.html
@@ -23,6 +23,75 @@
         <img src="./stan-lee.jpg" alt="StanleePhoto" />
         <h2>From 1922 to 2018</h2>
       </div>
+
+      <div class="main">
+        <p>
+          Stan Lee[1] (born Stanley Martin Lieber /ˈliːbər/; December 28, 1922 –
+          November 12, 2018) was an American comic book writer, editor,
+          publisher, and producer. He rose through the ranks of a family-run
+          business to become Marvel Comics' primary creative leader for two
+          decades, leading its expansion from a small division of a publishing
+          house to a multimedia corporation that dominated the comics industry,
+          which he received an executive producer credit. Meanwhile, he
+          continued independent creative ventures into his 90s, until his death
+          in 2018. Lee attended DeWitt Clinton High School in the Bronx.[9] In
+          his youth, Lee enjoyed writing and entertained dreams of writing the
+          "Great American Novel" one day.[10] He said that in his youth he
+          worked such part-time jobs as writing obituaries for a news service
+          and press releases for the National
+        </p>
+        <h3>Marvel Comics</h3>
+        <br />
+        <ul>
+          <li>
+            The Amazing Spider-Man #1–100, 105–110, 116–118 (co-written with
+            Gerry Conway), 200 (epilogue), Annual #1–5, 18 (1962–1984);
+          </li>
+          <br />
+          <li>The Amazing Spider-Man, strips (1977–2018)[178]</li>
+          <br />
+          <li>
+            Captain America #100–141 (1968–1971) (continues from Tales of
+            Suspense #99)
+          </li>
+          <br />
+          <li>Daredevil, #1–9, 11–50, 53 (story), Annual #1 (1964–1969)</li>
+          <br />
+          <li>Daredevil, vol. 2, #20 (backup story) (2001)</li>
+          <br />
+          <li>Epic Illustrated #1 (Silver Surfer) (1980)</li>
+          <br />
+          <li>
+            Fantastic Four #1–114, 115 (plot), 120–125, Annual #1–6 (1961–1972);
+            #296 (1986)
+          </li>
+          <br />
+          <li>
+            The Incredible Hulk #1–6 (1962–1963) (continues to Tales to Astonish
+            #59)
+          </li>
+          <br />
+          <li>The Incredible Hulk, vol. 2, #108–119, 120 (plot) (1968–1969)</li>
+          <br />
+          <li>
+            Journey into Mystery (Thor) plotter #83–96 (1962–1963), writer
+            #97–125, Annual #1 (1963–1966) (continues to Thor #126)
+          </li>
+          <br />
+          <div class="footer">
+            Aread more about Martin Lieber on
+            <span>
+              <a href=""></a>
+              <a
+                href="https://en.wikipedia.org/wiki/Stan_Lee"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Wikipedia
+              </a>
+            </span>
+          </div>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
